crates/nash-codegen/src/snapshots/nash_codegen__small_inline_tests__literal_64.snap
---
source: crates/nash-codegen/src/small_inline_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- baseline uplc\\n{}\\n--- optimized uplc\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
let length#2 : bytes -> int = \x#1 : bytes -> lengthOfByteString (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707) in
let anf#3 : int = length#2 (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707) in
let anf#4 : int = length#2 (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707) in
addInteger anf#3 anf#4
--- core after
let anf#3 : int = lengthOfByteString (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707) in
let anf#4 : int = lengthOfByteString (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707) in
addInteger anf#3 anf#4
--- baseline uplc
(program 1.1.0
  [(lam length_2
    [(lam anf_3
      [(lam anf_4 [[(builtin addInteger) anf_3] anf_4])
        [length_2
          (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707)]])
      [length_2
        (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707)]])
    (lam x_1
      [(builtin lengthOfByteString)
        (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707)])])
--- optimized uplc
(program 1.1.0
  [(lam anf_3
    [(lam anf_4 [[(builtin addInteger) anf_3] anf_4])
      [(builtin lengthOfByteString)
        (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707)]])
    [(builtin lengthOfByteString)
      (con bytestring #07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707)]])
--- result
(con integer 128)
--- logs
[]
