crates/nash-codegen/src/snapshots/nash_codegen__small_inline_tests__recursive_wrapper.snap
---
source: crates/nash-codegen/src/small_inline_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- baseline uplc\\n{}\\n--- optimized uplc\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
let increment#2 : int -> int = \x#1 : int -> addInteger x#1 1 in
letrec
  worker#4 : int -> int [static []] = \n#3 : int -> let anf#5 : bool = equalsInteger n#3 0 in
  case@Bool anf#5 of
    True -> 0
    False -> let anf#6 : int = subtractInteger n#3 1 in
    let anf#7 : int = worker#4 anf#6 in
    increment#2 anf#7
in
let anf#8 : int = worker#4 3 in
increment#2 anf#8
--- core after
letrec
  worker#4 : int -> int [static []] = \n#3 : int -> let anf#5 : bool = equalsInteger n#3 0 in
  case@Bool anf#5 of
    True -> 0
    False -> let anf#6 : int = subtractInteger n#3 1 in
    let anf#7 : int = worker#4 anf#6 in
    addInteger anf#7 1
in
let anf#8 : int = worker#4 3 in
addInteger anf#8 1
--- baseline uplc
(program 1.1.0
  [(lam increment_2
    [(lam worker_4 [(lam anf_8 [increment_2 anf_8]) [worker_4 (con integer 3)]])
      [(lam self_9 [self_9 self_9])
        (lam self_9
          (lam n_3
            [(lam anf_5
              (case
                anf_5
                [(lam anf_6 [(lam anf_7 [increment_2 anf_7]) [[self_9 self_9] anf_6]])
                  [[(builtin subtractInteger) n_3] (con integer 1)]]
                (con integer 0)))
              [[(builtin equalsInteger) n_3] (con integer 0)]]))]])
    (lam x_1 [[(builtin addInteger) x_1] (con integer 1)])])
--- optimized uplc
(program 1.1.0
  [(lam worker_4
    [(lam anf_8 [[(builtin addInteger) anf_8] (con integer 1)])
      [worker_4 (con integer 3)]])
    [(lam self_11 [self_11 self_11])
      (lam self_11
        (lam n_3
          [(lam anf_5
            (case
              anf_5
              [(lam anf_6
                [(lam anf_7 [[(builtin addInteger) anf_7] (con integer 1)])
                  [[self_11 self_11] anf_6]])
                [[(builtin subtractInteger) n_3] (con integer 1)]]
              (con integer 0)))
            [[(builtin equalsInteger) n_3] (con integer 0)]]))]])
--- result
(con integer 4)
--- logs
[]
